<resources>
    <string name="app_name">龙空</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="placeholder_thread_title">加载中…</string>
    <string name="account_type">io.pig.lkong</string>
    <string name="nav_header_desc">头像</string>
    <string name="thread_avatar_desc">头像</string>
    <string name="image_avatar_desc">头像</string>
    <string name="user_profile_avatar_desc">头像</string>
    <string name="forum_icon_desc">板块</string>
    <string name="hot_thread_desc">热门</string>
    <string name="back_desc">后退</string>
    <string name="user_coin_desc">龙币</string>
    <string name="user_diamond_desc">龙晶</string>
    <string name="timeline_thread_avatar_desc">头像</string>
    <string name="fab_desc">按钮</string>
    <string name="forward_desc">向前翻页</string>
    <string name="backward_desc">向前翻页</string>
    <string name="voice_desc">语音输入</string>
    <string name="search_desc">搜索</string>
    <string name="hint_content">内容</string>
    <string name="hint_title">标题</string>
    <string name="hint_account_email">注册邮箱</string>
    <string name="hint_account_password">密码</string>
    <string name="hint_url_name">链接文本</string>
    <string name="hint_url_value">链接地址</string>
    <string name="hint_rate_reason">评分理由</string>
    <string name="hint_rate_score">数值</string>
    <string name="hint_search">搜索</string>
    <string name="action_logout">退出账号</string>
    <string name="action_settings">设置</string>
    <string name="action_evening">夜间模式</string>
    <string name="action_punch">签到</string>
    <string name="action_notification">通知</string>
    <string name="action_clear">清理</string>
    <string name="action_search">搜索</string>
    <string name="action_send_post">发送</string>
    <string name="menu_home">个人主页</string>
    <string name="menu_gallery">我的收藏</string>
    <string name="menu_history">浏览历史</string>
    <string name="menu_setting">设置</string>
    <string name="text_recycle_empty_text">这里什么都没有~ 刷新试试？</string>
    <string name="text_datetime_today">今天&#160;</string>
    <string name="text_user_all_activities_title">所有动态</string>
    <string name="text_user_digest_title">精华</string>
    <string name="text_user_wealth_title">财富</string>
    <string name="text_last_punch_time">最后签到</string>
    <string name="text_current_continuous_punch_days">当前连续签到</string>
    <string name="text_longest_continuous_punch_days">最长连续签到</string>
    <string name="text_user_registration_time_title">注册时间</string>
    <string name="text_total_punch_days">总签到天数</string>
    <string name="new_post">发帖</string>
    <string name="title_activity_sign_in">登录界面</string>
    <string name="activity_sign_in_card_title">登陆龙的天空</string>
    <string name="input_error_email">请输入您的注册邮箱</string>
    <string name="input_error_password">请输入您的密码</string>
    <string name="button_sign_up">注册</string>
    <string name="button_faq">常见问题</string>
    <string name="button_sign_in">登录</string>
    <string name="button_edit">编辑</string>
    <string name="button_share">分享</string>
    <string name="button_reply">回复</string>
    <string name="item_thread_text_title">帖子标题</string>
    <string name="indicator_thread_digest">[精]&#160;</string>
    <string name="text_profile_header_followers">粉丝</string>
    <string name="text_profile_header_following">关注</string>
    <string name="text_profile_header_threads">主题</string>
    <string name="text_profile_header_posts">回复</string>
    <string name="text_profile_header_count_zero">0</string>
    <string name="format_fans_of">%1$s 的粉丝</string>
    <string name="format_replies_of">%1$s 的粉丝</string>
    <string name="format_followers_of">%1$s 关注了</string>
    <string name="format_threads_of">%1$s 的主题</string>
    <string name="format_digests_by">$1%s 的精华帖</string>
    <string name="format_timeline_thread">发表新主题 %1$s</string>
    <string name="format_timeline_quote">\@%1$s 回复了 %2$s</string>
    <string name="format_timeline_reply">来自 \@%1$s 的主题</string>
    <string name="tab_item_hot_thread">热门</string>
    <string name="tab_item_forum">板块</string>
    <string name="tab_item_follow_forum">热门</string>
    <string name="tab_item_timeline">时间线</string>
    <string name="tab_item_digest_thread">精华</string>
    <string name="setting_item_account_setting_title">账户设置</string>
    <string name="setting_item_account_setting_summary">管理你的账户</string>
    <string name="setting_category_display_title">显示</string>
    <string name="setting_item_theme_color_title">主题</string>
    <string name="setting_item_theme_color_summary">选择你喜欢的主题</string>
    <string name="setting_item_screen_rotation_title">屏幕旋转</string>
    <string name="setting_item_screen_rotation_summary">在这里调整屏幕旋转设置</string>
    <string-array name="setting_custom_rotation_title_array">
        <item>跟随系统设置</item>
        <item>竖屏</item>
        <item>横屏</item>
    </string-array>
    <string-array name="setting_custom_rotation_value_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="setting_category_notify">消息通知</string>
    <string name="setting_item_enable_background_notify_summary">开启后可以在通知栏收到新消息提醒</string>
    <string name="setting_item_enable_background_notify_title">开启消息通知</string>
    <string name="setting_item_check_notify_duration_title">检查周期</string>
    <string name="setting_item_check_notify_duration_summary">设置检查新消息的周期</string>
    <string-array name="setting_check_notify_duration_array">
        <item>15 分钟</item>
        <item>30 分钟</item>
        <item>45 分钟</item>
        <item>1 小时</item>
        <item>2 小时</item>
        <item>3 小时</item>
        <item>6 小时</item>
        <item>12 小时</item>
        <item>24 小时</item>
    </string-array>
    <string-array name="setting_check_notify_duration_value_array">
        <item>900</item>
        <item>1800</item>
        <item>2700</item>
        <item>3600</item>
        <item>7200</item>
        <item>10800</item>
        <item>21600</item>
        <item>43200</item>
        <item>86400</item>
    </string-array>
    <string name="setting_category_navigation">导航</string>
    <string name="setting_item_use_forums_first_summary">在第一页显示板块列表而不是信息流(重启应用生效)</string>
    <string name="setting_item_use_forums_first_title">首页显示板块列表</string>
    <string name="setting_item_timeline_only_thread_title">信息流只显示主题</string>
    <string name="setting_item_timeline_only_thread_summary">信息流（时间线）只显示主题</string>
    <string name="setting_item_forum_list_grid_title">网格显示板块列表</string>
    <string name="setting_item_forum_list_grid_summary">板块列表将以网格方式显示（不显示详细信息, 重启应用生效）</string>
    <string name="setting_category_forum_title">论坛设置</string>
    <string name="setting_item_image_download_policy_title">图片加载策略</string>
    <string name="setting_item_avatar_download_policy_title">头像加载策略</string>
    <string-array name="setting_image_download_policy_array">
        <item>总是加载</item>
        <item>永不加载</item>
        <item>仅 WiFi 加载</item>
    </string-array>
    <string-array name="setting_image_download_policy_values_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="setting_item_post_extra_tail_text_default">来自龙的天空 Android 客户端</string>
    <string name="setting_item_post_extra_tail_text_title">小尾巴</string>
    <string name="setting_item_post_extra_tail_text_summary">设置你的小尾巴内容</string>
    <string name="setting_item_scroll_by_volume_key_title">音量控制键滚动</string>
    <string name="setting_item_scroll_by_volume_key_summary">在帖子页面中通过音量键控制滚动</string>
    <string name="setting_category_other_title">其他</string>
    <string name="setting_item_feedback_value">有关界面、功能改进的建议，或者错误报告都可以</string>
    <string name="setting_item_feedback_title">建议与反馈</string>
    <string name="setting_item_about_title">关于</string>
    <string name="setting_item_version">版本</string>
    <string name="setting_category_author_title">关于作者</string>
    <string name="setting_theme_select">确认</string>
    <string name="setting_theme_base_theme">基本</string>
    <string name="setting_theme_dark_theme_summary">使用暗色主题</string>
    <string name="setting_theme_dark_theme">暗色主题</string>
    <string name="setting_theme_colors">颜色</string>
    <string name="setting_theme_primary_color_summary">改变主题颜色</string>
    <string name="setting_theme_primary_color">主题颜色</string>
    <string name="setting_theme_accent_color">强调颜色</string>
    <string name="setting_theme_accent_color_summary">改变强调颜色</string>
    <string name="setting_theme_light_ui_modes">浅色 UI 模式</string>
    <string name="setting_theme_primary_text_color">文本主题颜色</string>
    <string name="setting_theme_primary_text_color_summary">改变文本主题颜色</string>
    <string name="setting_theme_secondary_text_color">第二文本颜色</string>
    <string name="setting_theme_secondary_text_color_summary">改变第二文本颜色</string>
    <string name="setting_theme_system_ui_colors">系统 UI 颜色</string>
    <string name="setting_theme_status_bar_color">状态栏颜色</string>
    <string name="setting_theme_status_bar_color_summary">改变状态栏颜色</string>
    <string name="setting_theme_nav_bar_color">虚拟键颜色</string>
    <string name="setting_theme_nav_bar_summary_color">改变虚拟键颜色</string>
    <string-array name="setting_theme_light_status_mode_entries">
        <item>关闭, 状态栏图标为白色</item>
        <item>开启, 状态栏图标为黑色</item>
        <item>自动, 如果主色为浅色，状态栏图标将为黑色</item>
    </string-array>
    <string-array name="setting_theme_light_status_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="setting_theme_light_status_bar_mode">浅色状态栏模式</string>
    <string-array name="setting_theme_light_toolbar_mode_entries">
        <item>关闭, 工具栏文字和图标为白色</item>
        <item>开启, 工具栏文字和图标为黑色</item>
        <item>自动, 如果主色为浅色，工具栏文字和图标将为黑色</item>
    </string-array>
    <string name="setting_theme_light_toolbar_mode">浅色工具栏模式</string>
    <string name="setting_theme_text_size">文字大小</string>
    <string name="setting_theme_other_text_size_note">备注：其他文字设置出于简便的原因不在这里提供了。</string>
    <string name="setting_theme_headline_text_size">大标题字体大小</string>
    <string name="setting_theme_title_text_size">标题字体大小</string>
    <string name="setting_theme_subheading_text_size">子标题字体大小</string>
    <string name="setting_theme_body_text_size">正文字体大小</string>
    <string name="setting_theme_headline_text_size_desc">将字体大小应用到所有大标题, %ddp</string>
    <string name="setting_theme_title_text_size_desc">将字体大小应用到所有标题, %ddp</string>
    <string name="setting_theme_subheading_text_size_desc">将字体大小应用到所有子标题, %ddp</string>
    <string name="setting_theme_body_text_size_desc">将字体大小应用到所有正文 %ddp</string>
    <string name="setting_theme_default_value">默认</string>
    <string name="format_unit_ten_kilo">万</string>
    <string name="format_forum_item_summary">今日 %s</string>
    <string name="format_post_tail_prefix">&#160;──&#160;</string>
    <string name="format_notice_mentions">%1$d 个新提及</string>
    <string name="format_notice_notice">%1$d 条新通知</string>
    <string name="format_notice_private_message">%1$d 条新私信</string>
    <string name="format_notice_rate">%1$d 个新评分</string>
    <string name="format_notice_all_count">你有 %1$d 条新消息</string>
    <string-array name="thread_list_type_arrays">
        <item>默认</item>
        <item>精华</item>
    </string-array>
    <string name="format_post_rate_summary">+ %d</string>
    <string name="format_post_list_page_indicator">%1$d / %2$d</string>
    <string name="format_post_list_page_indicator_detail">第 %1$d 页 (%2$d - %3$d)</string>
    <string name="indicator_thread_author">&#160;&#160;[龙珠]</string>
    <string name="format_post_header_detail_count">%1$d 查看 · %2$d 回复</string>
    <string name="format_punch_day_count">已签到 %1$d 天</string>
    <string name="drawer_item_mentions">提及我的</string>
    <string name="drawer_item_notice">通知</string>
    <string name="drawer_item_notice_rate">评分</string>
</resources>